# diplomski

./: .gitignore  Cargo.toml
graphs/: db_er_diagram.drawio  db_uml_diagram.drawio
src/data_generator/: main.rs
